# python-agent-study

./: .gitignore  README.md  build-docs.py  index.md  mkdocs.yml
.github/workflows/: deploy.yml
Day01-Python基础语法/: 01-变量与数据类型.md  02-控制流.md  03-函数.md  04-数据结构.md  06-推导式.md  07-错误处理.md  08-练习题.md
Day02-Python进阶/: 01-类与面向对象.md  02-模块与导入.md  06-上下文管理器.md  07-生成器与迭代器.md  08-练习题.md  09-异步编程基础.md
Day03-Pydantic/: 03-练习题.md  README.md
Day04-OpenAI-SDK/: 02-练习题.md  README.md
Day05-LangChain基础/: 01-核心概念.md  02-练习题.md  03-LCEL进阶.md
Day06-LangGraph/: 01-StateGraph核心.md  03-多Agent模式.md
Day07-FastAPI/: 03-流式响应与中间件.md
Day08-asyncio/: 01-协程与事件循环.md  02-练习题.md  03-实战模式.md  README.md
Day09-测试与调试/: 03-Agent测试实战.md  README.md
Day10-综合项目/: 01-项目结构.md  02-Agent核心.md  04-总结.md  05-部署指南.md  06-练习题.md  README.md
Day10-综合项目/mini-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Day10-综合项目/mini-agent/src/mini_agent/: __init__.py  agent.py  config.py  main.py  models.py  tools.py
Day10-综合项目/mini-agent/src/mini_agent/api/: routes.py
Day10-综合项目/mini-agent/tests/: conftest.py  test_agent.py  test_api.py  test_tools.py
docs/: index.md
docs/Day01-Python基础语法/: 01-变量与数据类型.md  03-函数.md  05-字符串格式化.md  07-错误处理.md  09-文件与模块.md  10-数据处理基础.md  README.md
docs/Day02-Python进阶/: 03-文件IO与pathlib.md  04-虚拟环境与包管理.md  05-装饰器.md  06-上下文管理器.md  07-生成器与迭代器.md  README.md
docs/Day03-Pydantic/: 01-BaseModel基础.md  02-验证器.md  04-高级用法.md
docs/resources/: 常见面试题.md  (+1 more)
resources/: Agent架构速查.md  Python速查表.md  RAG专题.md  Transformer深入讲解.md  官方文档.md  常见面试题.md  模型微调专题.md
(+16 files in other folders)
